--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+v0.1-1  (2016-06-09)
+
+  o form: fixed -- the function now works when
+    'useFancyQuotes' is not FALSE; before, the function
+    failed or produced warnings
+
+  o form: ew argument 'form.options' for passing
+    options
+
 v0.1-0  (2016-03-17)
 
   o initial version: provides a function 'form', which is a
