--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ v0.1-1  (2016-06-09)
     'useFancyQuotes' is not FALSE; before, the function
     failed or produced warnings
 
-  o form: ew argument 'form.options' for passing
+  o form: new argument 'form.options' for passing
     options
 
 v0.1-0  (2016-03-17)
